--- a/index.html
+++ b/index.html
@@ -162,20 +162,21 @@
     <main>
         <section class="hero d-flex align-items-center justify-content-center">
             <div class="text-center text-white herosct">
-                <button class="btn btn-warning mb-3 herobtn">New Collection</button>
-                <h1>Beautiful <span class="text-warning"><em>plants</em></span> <br />For Your Interior</h1>
-                <p class="mt-3">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia
-                    consequuntur magni dolores eosqui.</p>
+                
+                <h1>A <em style="color:#a064c9; font-weight: bold; ">Flowers</em> Makes a Whole difference. <br /> We are here for all Your Events </h1>
+                <p class="mt-3 font-size:17px; ">We offer the best packages for | <span class="text-warning">Decoration</span>  |<span class="text-warning">Bookays</span>  | <span class="text-warning">Gifts Package</span>  and <span class="text-warning">Gifts Package</span>.</p>
+                 <button class="btn btn-warning mb-3 mt-5 herobtn">Contact us</button>
             </div>
         </section>
 
         <section class="container-fluid about align-items-center justify-content-center">
             <div class="row justify-content-center mb-5">
                 <div class="col-md-5 text-center">
-                    <p class="btn btn-warning mb-3 herobtn servicesbtn">About Our Services</p>
-                    <h1>We just love our work and <em>plant nature,</em> so we provide high quality products</h1>
+                    <h2 class=" mb-5 mt-5  " style=" font-size: 2.5rem;font-weight: bold;text-align: center; margin: 50px 0; color: #333;">About Us</p>
+                    <p class="mt-5" style="color: #333; font-size: 2.5rem; font-weight: lighter;">We are passionate about <em style="color: #198754;">flowers and Deco</em> of <em style="color: #198754;"> highest quality </em> where every arrangement is a <em style="color: #198754;">piece of art</em>, perfect for any occasion.</p>
                 </div>
             </div>
+            
             <!-- New row for cards -->
             <div class="row">
                 <div class="col-md-3">
