--- a/index.html
+++ b/index.html
@@ -129,7 +129,12 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
-            <a class="navbar-brand" href="#">BookayFlorists</a>
+            <!-- add logo here
+             
+            <a class="navbar-brand" href="#">BookayFlorists</a> -->
+            <a class="navbar-brand" href="#">
+                <img src="./assets/images/Bookay_Logo_plain.png" alt="BookayFlorists Logo" style="height: 90px;">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -161,7 +166,7 @@
         <section class="hero d-flex align-items-center justify-content-center">
             <div class="text-center text-white herosct">
                 
-                <h1 class="mb-5">A <em style="color:#a064c9; font-weight: bold; ">Flowers</em> Makes a Whole difference. <br /> We are here for all Your Events </h1>
+                <h1 class="mb-5"> <em style="color:#a064c9; font-weight: bold; ">BookayFlorists</em> Makes a Whole difference. <br /> We are here for all Your Events </h1>
                 <p class="mt-3 font-size:17px; ">We offer the best packages for | <span class="text-warning"> Decoration</span>  |<span class="text-warning"> Bookays</span>  | <span class="text-warning">Gifts Package</span>  & <span class="text-warning">Other Packages</span>.</p>
                  <button class="btn btn-warning mb-3 mt-5 herobtn">Contact us</button>
             </div>
@@ -518,9 +523,8 @@
                         <h5>Contact us</h5>
                         <ul class="list-unstyled">
                             <li>Phone: +254712203076</li>
-                            <li>Fax: +1800-964-152</li>
                             <li>Mail: example@gmail.com</li>
-                            <li>Liberty Plaza<br>Langata, Kenya</li>
+                            <li>Freedom Heights, 5th floor<br>Langata, Kenya</li>
                         </ul>
                     </div>
                     <div class="footer-bottom">
