adjusted the logo position and size

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
              
             <a class="navbar-brand" href="#">BookayFlorists</a> -->
             <a class="navbar-brand" href="#">
-                <img src="./assets/images/Bookay_Logo_plain.png" alt="BookayFlorists Logo" style="height: 90px;">
+                <img src="./assets/images/Bookay_Logo_plain.png" alt="BookayFlorists Logo" style="height: 100px; width: auto; margin-left: 40px;">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
