--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
         <section class="hero d-flex align-items-center justify-content-center">
             <div class="text-center text-white herosct">
                 
-                <h1 class="mb-5"> <em style="color:#a064c9; font-weight: bold; ">BookayFlorists</em> Makes a Whole difference. <br /> We are here for all Your Events </h1>
+                <h1 class="mb-5"> <em class="animated-text" style="color:#a064c9; font-weight: bold;">BookayFlorists</em>
+                    Makes a  difference. <br />  for all Your Events </h1>
                 <p class="mt-3 font-size:17px; ">We offer the best packages for | <span class="text-warning"> Decoration</span>  |<span class="text-warning"> Bookays</span>  | <span class="text-warning">Gifts Package</span>  & <span class="text-warning">Other Packages</span>.</p>
                  <button class="btn btn-warning mb-3 mt-5 herobtn">Contact us</button>
             </div>
