--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <!-- add logo here
              
             <a class="navbar-brand" href="#">BookayFlorists</a> -->
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="#Home">
                 <img src="./assets/images/Bookay_Logo_plain.png" alt="BookayFlorists Logo" style="height: 100px; width: auto; margin-left: 40px;">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -524,7 +524,7 @@
                         <h5>Contact us</h5>
                         <ul class="list-unstyled">
                             <li>Phone: +254712203076</li>
-                            <li>Mail: example@gmail.com</li>
+                            <li>Mail: bookayflorists@gmail.com</li>
                             <li>Freedom Heights, 5th floor<br>Langata, Kenya</li>
                         </ul>
                     </div>
