--- a/category-flowers.html
+++ b/category-flowers.html
@@ -117,17 +117,36 @@
 
         .header-buttons {
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-start;
             align-items: center;
             margin-bottom: 20px;
         }
 
-        .btn-add-flower {
-            margin-left: auto;
+        .input-group {
+            flex: 1;
+            max-width: 400px;
         }
 
-        .header-buttons {
-            margin-top: 10px;
+        .input-group .form-control {
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+        }
+
+        .input-group .input-group-append .btn {
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+        }
+
+        .btn-add-flower, .btn-danger, .btn-secondary {
+            margin-left: 15px;
+        }
+
+        .sort-select {
+            margin-left: 15px;
+            max-width: 200px;
+        }
+        .category-flowers-search{
+            margin-top: 14px;
         }
     </style>
 </head>
@@ -136,9 +155,11 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
             <a class="navbar-brand" href="#Home">
-                <img src="./assets/images/Bookay_Logo_plain.png" alt="BookayFlorists Logo" style="height: 100px; width: auto; margin-left: 40px;">
+                <img src="./assets/images/Bookay_Logo_plain.png" alt="BookayFlorists Logo"
+                    style="height: 100px; width: auto; margin-left: 40px;">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -166,9 +187,21 @@
     <!-- Header Buttons -->
     <div class="container">
         <div class="header-buttons">
-            <button class="btn btn-secondary" onclick="window.location.href='categories.html'">Go to Categories</button>
-            <button class="btn btn-success btn-add-flower" data-toggle="modal" data-target="#addFlowerModal">Add Flower</button>
-            <button class="btn btn-danger m-3" onclick="logout()">Logout</button>
+            <div class="input-group mb-3 category-flowers-search">
+                <input type="text" id="searchInput" class="form-control" placeholder="Search flowers...">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" onclick="clearSearch()">Clear</button>
+                </div>
+            </div>
+            <select id="sortBy" class="form-control sort-select" onchange="fetchCategoryAndFlowers(1)">
+                <option value="created_at.desc">Sort by: Newest</option>
+                <option value="created_at.asc">Sort by: Oldest</option>
+                <option value="price.asc">Sort by: Price (Low to High)</option>
+                <option value="price.desc">Sort by: Price (High to Low)</option>
+            </select>
+            <button class="btn btn-secondary ml-3" onclick="window.location.href='categories.html'">Go to Categories</button>
+            <button class="btn btn-success btn-add-flower ml-3" data-toggle="modal" data-target="#addFlowerModal">Add Flower</button>
+            <button class="btn btn-danger ml-3" onclick="logout()">Logout</button>
         </div>
     </div>
 
@@ -190,15 +223,18 @@
                     <form id="addFlowerForm">
                         <div class="form-group">
                             <label for="flowerName">Flower Name</label>
-                            <input type="text" class="form-control" id="flowerName" placeholder="Enter flower name" required>
+                            <input type="text" class="form-control" id="flowerName" placeholder="Enter flower name"
+                                required>
                         </div>
                         <div class="form-group">
                             <label for="flowerDescription">Description</label>
-                            <textarea class="form-control" id="flowerDescription" rows="3" placeholder="Enter flower description" required></textarea>
+                            <textarea class="form-control" id="flowerDescription" rows="3"
+                                placeholder="Enter flower description" required></textarea>
                         </div>
                         <div class="form-group">
                             <label for="flowerPrice">Price</label>
-                            <input type="number" class="form-control" id="flowerPrice" placeholder="Enter price" required>
+                            <input type="number" class="form-control" id="flowerPrice" placeholder="Enter price"
+                                required>
                         </div>
                         <div class="form-group">
                             <label for="flowerImage">Image Upload</label>
@@ -255,7 +291,8 @@
     </div>
 
     <!-- Delete Confirmation Modal -->
-    <div class="modal fade" id="deleteFlowerModal" tabindex="-1" aria-labelledby="deleteFlowerModalLabel" aria-hidden="true">
+    <div class="modal fade" id="deleteFlowerModal" tabindex="-1" aria-labelledby="deleteFlowerModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -349,6 +386,146 @@
             return params.get('category_id');
         }
 
+        // Function to fetch and display category and flowers with pagination, search, and sorting functionality
+        async function fetchCategoryAndFlowers(page = 1, searchTerm = '') {
+            const categoryId = getCategoryIdFromURL();
+            const sortBy = document.getElementById('sortBy').value;
+
+            // Fetch category details
+            const { data: categoryData, error: categoryError } = await supabaseClient
+                .from('categories')
+                .select('*')
+                .eq('id', categoryId)
+                .single();
+
+            if (categoryError) {
+                console.error('Error fetching category:', categoryError);
+            } else {
+                document.getElementById('categoryName').textContent = categoryData.category_name;
+                document.getElementById('categoryDescription').textContent = categoryData.description;
+            }
+
+            // Fetch total number of flowers in this category for pagination
+            const { count: totalCount, error: countError } = await supabaseClient
+                .from('flowers')
+                .select('*', { count: 'exact', head: true })
+                .eq('category_id', categoryId);
+
+            if (countError) {
+                console.error('Error fetching flower count:', countError);
+            } else {
+                totalFlowers = totalCount;
+            }
+
+            // Fetch flowers in this category with pagination, search, and sorting filter
+            let query = supabaseClient
+                .from('flowers')
+                .select('*')
+                .eq('category_id', categoryId)
+                .range((page - 1) * flowersPerPage, page * flowersPerPage - 1)
+                .order(sortBy.split('.')[0], { ascending: sortBy.split('.')[1] === 'asc' });
+
+            if (searchTerm) {
+                query = query.ilike('name', `%${searchTerm}%`); // Case-insensitive search
+            }
+
+            const { data: flowers, error: flowersError } = await query;
+
+            if (flowersError) {
+                console.error('Error fetching flowers:', flowersError);
+            } else {
+                const flowerList = document.getElementById('flowerList');
+                flowerList.innerHTML = ''; // Clear any existing flowers
+
+                flowers.forEach(flower => {
+                    const flowerCard = `
+                        <div class="col-md-4">
+                            <div class="flower-card">
+                                <img src="${flower.image_url}" alt="${flower.name}" loading="lazy">
+                                <div class="flower-card-body">
+                                    <h5 class="flower-card-title">${flower.name}</h5>
+                                    <p class="flower-card-text">${flower.description}</p>
+                                    <p class="flower-card-text price">KSH ${flower.price}</p>
+                                    <div class="d-flex justify-content-center">
+                                        <button class="btn btn-edit" onclick="showEditFlowerModal(${flower.id})">Edit</button>
+                                        <button class="btn btn-delete" onclick="confirmDeleteFlower(${flower.id})">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    `;
+                    flowerList.insertAdjacentHTML('beforeend', flowerCard);
+                });
+
+                // Update pagination controls
+                updatePaginationControls(page, searchTerm);
+            }
+        }
+
+        // Function to update pagination controls
+        function updatePaginationControls(page, searchTerm = '') {
+            const pagination = document.getElementById('pagination');
+            const totalPages = Math.ceil(totalFlowers / flowersPerPage);
+
+            pagination.innerHTML = ''; // Clear existing pagination controls
+
+            for (let i = 1; i <= totalPages; i++) {
+                const pageItem = `
+                    <li class="page-item ${i === page ? 'active' : ''}">
+                        <a class="page-link" href="#" onclick="fetchCategoryAndFlowers(${i}, '${searchTerm}')">${i}</a>
+                    </li>
+                `;
+                pagination.insertAdjacentHTML('beforeend', pageItem);
+            }
+        }
+
+        // Function to clear search input and reload all flowers
+        function clearSearch() {
+            document.getElementById('searchInput').value = '';
+            fetchCategoryAndFlowers(1, '');
+        }
+
+        // Event listener for search input
+        document.getElementById('searchInput').addEventListener('input', function () {
+            const searchTerm = this.value;
+            fetchCategoryAndFlowers(1, searchTerm);
+        });
+
+        // Initial fetch when page loads
+        fetchCategoryAndFlowers(currentPage);
+
+        // Function to show flash messages
+        function showFlashMessage(message, type = 'success') {
+            const flashMessageContainer = document.getElementById('flashMessageContainer');
+            const alertType = type === 'success' ? 'alert-success' : 'alert-danger';
+            const alertMessage = `
+                <div class="alert ${alertType} alert-dismissible fade show" role="alert">
+                    ${message}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            `;
+
+            flashMessageContainer.innerHTML = alertMessage;
+
+            // Automatically remove the flash message after 3 seconds
+            setTimeout(() => {
+                $('.alert').alert('close');
+            }, 3000);
+        }
+
+        // Function to handle logout
+        async function logout() {
+            const { error } = await supabaseClient.auth.signOut();
+            if (error) {
+                console.error('Error logging out:', error.message);
+            } else {
+                // Redirect to login page after successful logout
+                window.location.href = 'login.html';
+            }
+        }
+
         // Function to add a new flower to the current category with file upload
         async function addFlower() {
             const categoryId = getCategoryIdFromURL(); // Get the current category ID from the URL
@@ -401,97 +578,6 @@
                 fetchCategoryAndFlowers(currentPage); // Refresh the flower list
                 showFlashMessage('Flower added successfully!');
             }
-        }
-
-        // Function to fetch and display category and flowers with pagination
-        async function fetchCategoryAndFlowers(page = 1) {
-            const categoryId = getCategoryIdFromURL();
-
-            // Fetch category details
-            const { data: categoryData, error: categoryError } = await supabaseClient
-                .from('categories')
-                .select('*')
-                .eq('id', categoryId)
-                .single();
-
-            if (categoryError) {
-                console.error('Error fetching category:', categoryError);
-            } else {
-                document.getElementById('categoryName').textContent = categoryData.category_name;
-                document.getElementById('categoryDescription').textContent = categoryData.description;
-            }
-
-            // Fetch total number of flowers in this category for pagination
-            const { count: totalCount, error: countError } = await supabaseClient
-                .from('flowers')
-                .select('*', { count: 'exact', head: true })
-                .eq('category_id', categoryId);
-
-            if (countError) {
-                console.error('Error fetching flower count:', countError);
-            } else {
-                totalFlowers = totalCount;
-            }
-
-            // Fetch flowers in this category with pagination
-            const { data: flowers, error: flowersError } = await supabaseClient
-                .from('flowers')
-                .select('*')
-                .eq('category_id', categoryId)
-                .range((page - 1) * flowersPerPage, page * flowersPerPage - 1);
-
-            if (flowersError) {
-                console.error('Error fetching flowers:', flowersError);
-            } else {
-                const flowerList = document.getElementById('flowerList');
-                flowerList.innerHTML = ''; // Clear any existing flowers
-
-                flowers.forEach(flower => {
-                    const flowerCard = `
-                        <div class="col-md-4">
-                            <div class="flower-card">
-                                <img src="${flower.image_url}" alt="${flower.name}" loading="lazy">
-                                <div class="flower-card-body">
-                                    <h5 class="flower-card-title">${flower.name}</h5>
-                                    <p class="flower-card-text">${flower.description}</p>
-                                    <p class="flower-card-text price">KSH ${flower.price}</p>
-                                    <div class="d-flex justify-content-center">
-                                        <button class="btn btn-edit" onclick="showEditFlowerModal(${flower.id})">Edit</button>
-                                        <button class="btn btn-delete" onclick="confirmDeleteFlower(${flower.id})">Delete</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    `;
-                    flowerList.insertAdjacentHTML('beforeend', flowerCard);
-                });
-
-                // Update pagination controls
-                updatePaginationControls(page);
-            }
-        }
-
-        // Function to update pagination controls
-        function updatePaginationControls(page) {
-            const pagination = document.getElementById('pagination');
-            const totalPages = Math.ceil(totalFlowers / flowersPerPage);
-
-            pagination.innerHTML = ''; // Clear existing pagination controls
-
-            for (let i = 1; i <= totalPages; i++) {
-                const pageItem = `
-                    <li class="page-item ${i === page ? 'active' : ''}">
-                        <a class="page-link" href="#" onclick="fetchCategoryAndFlowers(${i})">${i}</a>
-                    </li>
-                `;
-                pagination.insertAdjacentHTML('beforeend', pageItem);
-            }
-        }
-
-        // Function to handle ordering a flower (implement according to your needs)
-        function orderFlower(flowerId) {
-            console.log('Ordering flower ID:', flowerId);
-            // Implement ordering logic here
         }
 
         // Function to show the edit flower modal and populate fields
@@ -597,41 +683,6 @@
                 $('#deleteFlowerModal').modal('hide');
                 fetchCategoryAndFlowers(currentPage); // Refresh the flower list
                 showFlashMessage('Flower deleted successfully!');
-            }
-        }
-
-        // Initial fetch when page loads
-        fetchCategoryAndFlowers(currentPage);
-
-        // Function to show flash messages
-        function showFlashMessage(message, type = 'success') {
-            const flashMessageContainer = document.getElementById('flashMessageContainer');
-            const alertType = type === 'success' ? 'alert-success' : 'alert-danger';
-            const alertMessage = `
-                <div class="alert ${alertType} alert-dismissible fade show" role="alert">
-                    ${message}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            `;
-
-            flashMessageContainer.innerHTML = alertMessage;
-
-            // Automatically remove the flash message after 3 seconds
-            setTimeout(() => {
-                $('.alert').alert('close');
-            }, 3000);
-        }
-
-        // Function to handle logout
-        async function logout() {
-            const { error } = await supabaseClient.auth.signOut();
-            if (error) {
-                console.error('Error logging out:', error.message);
-            } else {
-                // Redirect to login page after successful logout
-                window.location.href = 'login.html';
             }
         }
     </script>
