--- a/login.html
+++ b/login.html
@@ -39,11 +39,6 @@
             color: #333;
         }
 
-        .form-group label {
-            font-weight: bold;
-            color: #555;
-        }
-
         .btn-login {
             background-color: #198754;
             color: #fff;
@@ -66,6 +61,11 @@
         .forgot-password:hover {
             color: #155724;
         }
+
+        .form-control {
+            border-radius: 0.25rem;
+            padding: 0.75rem;
+        }
     </style>
 </head>
 
@@ -83,42 +83,63 @@
                     <input type="password" class="form-control" id="password" placeholder="Password" required>
                 </div>
                 <button type="submit" class="btn btn-login">Login</button>
-                <a href="#" class="forgot-password">Forgot your password?</a>
+                <a href="#" class="forgot-password" data-toggle="modal" data-target="#forgotPasswordModal">Forgot your password?</a>
             </form>
+        </div>
+    </div>
+
+    <!-- Forgot Password Modal -->
+    <div class="modal fade" id="forgotPasswordModal" tabindex="-1" role="dialog" aria-labelledby="forgotPasswordModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="forgotPasswordModalLabel">Forgot Password</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="forgotPasswordForm">
+                        <div class="form-group">
+                            <label for="forgotEmail">Email</label>
+                            <input type="email" class="form-control" id="forgotEmail" placeholder="Enter your email" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Request Reset</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
         const supabaseUrl = 'https://rdqaxqagqyylxvdksnzi.supabase.co';
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJkcWF4cWFncXl5bHh2ZGtzbnppIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTcyMzkyNjk5NywiZXhwIjoyMDM5NTAyOTk3fQ.BCgpL_7mNghbz_Y7uQgVRhjjIAh5zCuwHKltD3VtZIU'; // Replace with your actual Supabase key
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJkcWF4cWFncXl5bHh2ZGtzbnppIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTcyMzkyNjk5NywiZXhwIjoyMDM5NTAyOTk3fQ.BCgpL_7mNghbz_Y7uQgVRhjjIAh5zCuwHKltD3VtZIU'; // Replace with your actual Supabase anon key
         const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
+
+        document.getElementById('forgotPasswordForm').addEventListener('submit', async function (e) {
+            e.preventDefault();
+            const email = document.getElementById('forgotEmail').value;
+
+            const { data, error } = await supabaseClient.auth.resetPasswordForEmail(email);
+
+            if (error) {
+                alert('Error requesting password reset: ' + error.message);
+            } else {
+                alert('Password reset email sent. Please check your inbox.');
+                $('#forgotPasswordModal').modal('hide');
+            }
+        });
 
         async function loginUser(email, password) {
             const { data, error } = await supabaseClient.auth.signInWithPassword({ email, password });
-            console.log(data);
             if (error) {
                 alert('Login failed: ' + error.message);
                 return;
             }
-
-            // Check user role
-            const { data: user, error: userError } = await supabaseClient
-                .from('users')
-                .select('role')
-                .eq('username', email)
-                .single();
-
-            // if (userError || user.role !== 'admin') {
-            //     alert('Access denied. Admins only.');
-            //     await supabaseClient.auth.signOut(); // Logout the user
-            //     window.location.href = 'login.html'; // Redirect to login page
-            //     return;
-            // }
-
-            // Redirect to categories page
-            window.location.href = 'categories.html';
+            window.location.href = 'categories.html'; // Redirect to categories page
         }
 
         document.getElementById('loginForm').addEventListener('submit', function (e) {
