preloader; reset password

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -68,12 +68,15 @@
             e.preventDefault();
             const email = document.getElementById('email').value;
 
-            const { data, error } = await supabaseClient.auth.resetPasswordForEmail(email);
+            // Add redirectTo URL for password reset
+            const { data, error } = await supabaseClient.auth.resetPasswordForEmail(email, {
+                redirectTo: 'http://185.189.195.112/update-password.html'  // Specify your redirect URL
+            });
 
             if (error) {
                 alert('Error requesting password reset: ' + error.message);
             } else {
-                alert('Password reset email sent. Please check your inbox.');
+                alert('Password reset email sent. Please check your inbox...');
             }
         });
     </script>
