--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="assets/common.css">
     <style>
         body {
             overflow-x: hidden;
@@ -66,10 +66,26 @@
             border-radius: 0.25rem;
             padding: 0.75rem;
         }
+
+        .password-container {
+            position: relative;
+        }
+
+        .toggle-password {
+            position: absolute;
+            top: 74%;
+            right: 10px;
+            transform: translateY(-50%);
+            cursor: pointer;
+        }
     </style>
 </head>
 
 <body>
+    <!-- Preloader -->
+<div id="preloader">
+        <div class="spinner"></div>
+    </div>
     <div class="login-container">
         <div class="login-form">
             <h2>Login</h2>
@@ -78,9 +94,10 @@
                     <label for="email">Email address</label>
                     <input type="email" class="form-control" id="email" placeholder="Enter email" required>
                 </div>
-                <div class="form-group">
+                <div class="form-group password-container">
                     <label for="password">Password</label>
                     <input type="password" class="form-control" id="password" placeholder="Password" required>
+                    <i class="far fa-eye toggle-password" id="togglePassword"></i>
                 </div>
                 <button type="submit" class="btn btn-login">Login</button>
                 <a href="#" class="forgot-password" data-toggle="modal" data-target="#forgotPasswordModal">Forgot your password?</a>
@@ -114,6 +131,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="assets/common.js"></script>
     <script>
         const supabaseUrl = 'https://rdqaxqagqyylxvdksnzi.supabase.co';
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJkcWF4cWFncXl5bHh2ZGtzbnppIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTcyMzkyNjk5NywiZXhwIjoyMDM5NTAyOTk3fQ.BCgpL_7mNghbz_Y7uQgVRhjjIAh5zCuwHKltD3VtZIU'; // Replace with your actual Supabase anon key
@@ -123,7 +141,9 @@
             e.preventDefault();
             const email = document.getElementById('forgotEmail').value;
 
-            const { data, error } = await supabaseClient.auth.resetPasswordForEmail(email);
+            const { data, error } = await supabaseClient.auth.resetPasswordForEmail(email, {
+                redirectTo: 'http://185.189.195.112/update-password.html'  // Specify your redirect URL
+            });
 
             if (error) {
                 alert('Error requesting password reset: ' + error.message);
@@ -131,6 +151,19 @@
                 alert('Password reset email sent. Please check your inbox.');
                 $('#forgotPasswordModal').modal('hide');
             }
+        });
+
+        // Password visibility toggle
+        const togglePassword = document.getElementById('togglePassword');
+        const password = document.getElementById('password');
+
+        togglePassword.addEventListener('click', function () {
+            // Toggle the type attribute
+            const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+            password.setAttribute('type', type);
+
+            // Toggle the eye icon
+            this.classList.toggle('fa-eye-slash');
         });
 
         async function loginUser(email, password) {
