--- a/update-password.html
+++ b/update-password.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Update Password</title>
+    <link rel="stylesheet" href="assets/common.css">
+    <script src="assets/common.js"></script>
     <style>
         .update-password-container {
             min-height: 100vh;
@@ -45,6 +47,10 @@
 </head>
 
 <body>
+    <!-- Preloader -->
+<div id="preloader">
+    <div class="spinner"></div>
+</div>
     <div class="update-password-container">
         <div class="update-password-form">
             <h2>Update Password</h2>
