--- a/categories.html
+++ b/categories.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./assets/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-
+    <link rel="stylesheet" href="assets/common.css">
+    <script src="assets/common.js"></script>
     <style>
         body {
             overflow-x: hidden;
@@ -85,6 +86,10 @@
 </head>
 
 <body>
+    <!-- Preloader -->
+<div id="preloader">
+    <div class="spinner"></div>
+</div>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
             <a class="navbar-brand" href="#Home">
