--- a/category-flowers.html
+++ b/category-flowers.html
@@ -445,70 +445,83 @@
 
         // Function to fetch and display category and flowers with pagination, search, and sorting functionality
         async function fetchCategoryAndFlowers(page = 1, searchTerm = '') {
-    const flowerList = document.getElementById('flowerList');
-
-    // Show skeleton loader before fetching the flowers
-    flowerList.innerHTML = `
-        <div class="col-md-4">
-            <div class="flower-card skeleton">
-                <div class="skeleton-img"></div>
-                <div class="flower-card-body">
-                    <div class="skeleton-text"></div>
-                    <div class="skeleton-price"></div>
-                </div>
-            </div>
-        </div>
-        <!-- Add more skeleton cards if needed -->
-    `;
-
-    // Fetch flowers as usual after showing the skeleton loader
-    const categoryId = getCategoryIdFromURL();
-    const sortBy = document.getElementById('sortBy').value;
-
-    // Fetch category and flower data here
-    let query = supabaseClient
-        .from('flowers')
-        .select('*')
-        .eq('category_id', categoryId)
-        .range((page - 1) * flowersPerPage, page * flowersPerPage - 1)
-        .order(sortBy.split('.')[0], { ascending: sortBy.split('.')[1] === 'asc' });
-
-    if (searchTerm) {
-        query = query.ilike('name', `%${searchTerm}%`);
-    }
-
-    const { data: flowers, error: flowersError } = await query;
-
-    // Replace skeleton loader with real data once loaded
-    if (flowersError) {
-        console.error('Error fetching flowers:', flowersError);
-    } else {
-        flowerList.innerHTML = ''; // Clear the skeleton loader
-
-        flowers.forEach(flower => {
-            const flowerCard = `
+            const flowerList = document.getElementById('flowerList');
+            const categoryId = getCategoryIdFromURL();
+            
+            // Show skeleton loader before fetching the flowers
+            flowerList.innerHTML = `
                 <div class="col-md-4">
-                    <div class="flower-card">
-                        <img src="${flower.image_url}" alt="${flower.name}" loading="lazy">
+                    <div class="flower-card skeleton">
+                        <div class="skeleton-img"></div>
                         <div class="flower-card-body">
-                            <h5 class="flower-card-title">${flower.name}</h5>
-                            <p class="flower-card-text">${flower.description}</p>
-                            <p class="flower-card-text price">KSH ${flower.price}</p>
-                            <div class="d-flex justify-content-center">
-                                <button class="btn btn-edit" onclick="showEditFlowerModal(${flower.id})">Edit</button>
-                                <button class="btn btn-delete" onclick="confirmDeleteFlower(${flower.id})">Delete</button>
-                            </div>
+                            <div class="skeleton-text"></div>
+                            <div class="skeleton-price"></div>
                         </div>
                     </div>
                 </div>
             `;
-            flowerList.insertAdjacentHTML('beforeend', flowerCard);
-        });
 
-        // Update pagination controls
-        updatePaginationControls(page, searchTerm);
-    }
-}
+            // Fetch the category details first
+            const { data: category, error: categoryError } = await supabaseClient
+                .from('categories')
+                .select('*')
+                .eq('id', categoryId)
+                .single();
+
+            if (categoryError) {
+                console.error('Error fetching category details:', categoryError);
+            } else {
+                // Populate the category name and description placeholders
+                document.getElementById('categoryName').textContent = category.name;
+                document.getElementById('categoryDescription').textContent = category.description;
+            }
+
+            // Fetch the flowers in the category
+            const sortBy = document.getElementById('sortBy').value;
+
+            let query = supabaseClient
+                .from('flowers')
+                .select('*')
+                .eq('category_id', categoryId)
+                .range((page - 1) * flowersPerPage, page * flowersPerPage - 1)
+                .order(sortBy.split('.')[0], { ascending: sortBy.split('.')[1] === 'asc' });
+
+            if (searchTerm) {
+                query = query.ilike('name', `%${searchTerm}%`);
+            }
+
+            const { data: flowers, error: flowersError } = await query;
+
+            // Replace skeleton loader with real data once loaded
+            if (flowersError) {
+                console.error('Error fetching flowers:', flowersError);
+            } else {
+                flowerList.innerHTML = ''; // Clear the skeleton loader
+
+                flowers.forEach(flower => {
+                    const flowerCard = `
+                        <div class="col-md-4">
+                            <div class="flower-card">
+                                <img src="${flower.image_url}" alt="${flower.name}" loading="lazy">
+                                <div class="flower-card-body">
+                                    <h5 class="flower-card-title">${flower.name}</h5>
+                                    <p class="flower-card-text">${flower.description}</p>
+                                    <p class="flower-card-text price">KSH ${flower.price}</p>
+                                    <div class="d-flex justify-content-center">
+                                        <button class="btn btn-edit" onclick="showEditFlowerModal(${flower.id})">Edit</button>
+                                        <button class="btn btn-delete" onclick="confirmDeleteFlower(${flower.id})">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    `;
+                    flowerList.insertAdjacentHTML('beforeend', flowerCard);
+                });
+
+                // Update pagination controls
+                updatePaginationControls(page, searchTerm);
+            }
+        }
 
 
         // Function to update pagination controls
