--- a/categories.html
+++ b/categories.html
@@ -172,7 +172,7 @@
                         <textarea class="form-control" id="categoryDescription" rows="3" placeholder="Enter category description" required></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="categoryImage">Category Image</label>
+                        <label for="categoryImage">Category Image(png or jpeg)</label>
                         <input type="file" class="form-control-file" id="categoryImage" required>
                     </div>
                 </form>
